--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
-
+		<!-- <link rel="stylesheet" href="css/theme/default.css" id="theme"> -->
+		<link href="css/overwrite.css" rel="stylesheet" type="text/css">
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
@@ -37,19 +37,20 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
+					<h1>Putting your Tears into the Broth</h1>
+					<h3>Product design and development</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>Created by <a href="http://marklacsamana.ph">Mark Lacsamana</a> / <a href="http://twitter.com/emkey">@emkey</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
+					<h2>Mark Lester C. Lacsamana</h2>
+					<ul>
+						<li>Management/Marketing Graduate</li>
+						<li>Design/Art and Communication has always been my first love</li>
+						<li>Worked in Advertising and Startups</li>
+					</ul>
 
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
