--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				</section>
 
 				<section>
+					
 					<h2>Mark Lester C. Lacsamana</h2>
 					<ul>
 						<li>Management/Marketing Graduate</li>
@@ -52,22 +53,19 @@
 						<li>Worked in Advertising and Startups</li>
 					</ul>
 
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
 				</section>
 
 				<!-- Example of nested vertical slides -->
-				<section>
+				<section data-state="customer-ramen" class="customer-ramen">
 					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#" class="navigate-down">down</a>.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
+						<blockquote>The food that you serve your customer becomes a part of them. It contains your spirit. That’s why your ramen must be an expression of pure love. A gift from your heart.</blockquote>
+					</section>
+					<section>
+						<h2>Site vs. Product</h2>
+
+							Its not just about digital/online presence anymore its about value
+
+
 					</section>
 					<section>
 						<h2>Basement Level 1</h2>
