added product quote
added product quote

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/reveal.min.css">
 		<!-- <link rel="stylesheet" href="css/theme/default.css" id="theme"> -->
 		<link href="css/overwrite.css" rel="stylesheet" type="text/css">
@@ -36,55 +36,29 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
-					<h1>Putting your Tears into the Broth</h1>
+				<section data-state="title-page">
+					<div class="slide-content">
+					<h1>The Ramen Girl</h1>
 					<h3>Product design and development</h3>
 					<p>
 						<small>Created by <a href="http://marklacsamana.ph">Mark Lacsamana</a> / <a href="http://twitter.com/emkey">@emkey</a></small>
 					</p>
+					</div>
 				</section>
-
-				<section>
-					
-					<h2>Mark Lester C. Lacsamana</h2>
-					<ul>
-						<li>Management/Marketing Graduate</li>
-						<li>Design/Art and Communication has always been my first love</li>
-						<li>Worked in Advertising and Startups</li>
-					</ul>
-
+				<section data-state="site-product">
+					<h1>Site<span>vs</span>Product</h1>
+					No longer just giving <em>presence</em> but giving <em>value</em>
 				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section data-state="customer-ramen" class="customer-ramen">
-					<section>
-						<blockquote>The food that you serve your customer becomes a part of them. It contains your spirit. That’s why your ramen must be an expression of pure love. A gift from your heart.</blockquote>
+					<section class="quote">
+						<blockquote>Each bowl of ramen you prepare is a gift to your customer. <strong>The food that you serve your customer becomes a part of them.</strong> It contains your spirit. That's why your ramen must be an expression of pure love. A gift from your heart.</blockquote>
 					</section>
 					<section>
-						<h2>Site vs. Product</h2>
-
-							Its not just about digital/online presence anymore its about value
-
-
+						<p>Our Products become a part of our users lives</p>
 					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
-					</section>
+					
 				</section>
 
 				<section>
