--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="css/reveal.min.css">
+		
+		<link rel="stylesheet" href="css/reveal.css">
 		<!-- <link rel="stylesheet" href="css/theme/default.css" id="theme"> -->
 		<link href="css/overwrite.css" rel="stylesheet" type="text/css">
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
-
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
 		<script>
 			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
@@ -28,6 +28,7 @@
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
+		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -57,6 +58,7 @@
 					</section>
 					<section>
 						<p>Our Products become a part of our users lives</p>
+						<p> <i class="icon-facebook-sign"></i> <i class="icon-twitter-sign"></i> <i class="icon-tumblr-sign"></i>  <i class="icon-youtube-play"></i> <i class="icon-foursquare"></i> <br /><i class=" icon-github-sign"></i> <i class="icon-flickr"></i> <i class="icon-stackexchange"></i> <i class="icon-dropbox"></i></p>
 					</section>
 					
 				</section>
