Added Inner Universe slide
added inner universe

--- a/index.html
+++ b/index.html
@@ -63,11 +63,18 @@
 					
 				</section>
 
-				<section>
-					<h2>Slides</h2>
-					<p>
-						Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slid.es" target="_blank">http://slid.es</a>.
-					</p>
+				<section data-state="inner-universe">
+					<section>
+						<blockquote>
+						A bowl of ramen is a self-contained universe, with life from the sea, the mountains, and the earth. All existing in perfect harmony. Harmony is essential. What holds it all together is the broth. The broth gives life to the ramen.
+						</blockquote>
+						
+					</section>
+					<section>
+						<h1>UX of Verticals</h1>
+						<p>Its never just about your app or your website</p>
+						<p><i class="icon-4x icon-mobile-phone"></i> <i class="icon-4x icon-laptop"></i> <i class="icon-3x icon-signal"></i> <i class="icon-4x icon-moon"></i> <i class="icon-4x icon-plane"></i></p>
+					</section>
 				</section>
 
 				<section>
