--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							<h2>How might we help college students make better spending decisions?</h2>
 						</section>
 						<section>
-							Plan and Design a web/mobile app that will help you keep better track of your expenses.
+							<h2>Plan and Design a web/mobile app that will help you keep better track of your expenses.</h2>
 							<ol>
 								<li class="fragment">Features</li>
 								<li class="fragment">Aesthetics</li>
@@ -154,6 +154,9 @@
 						</section>
 						<section data-background="images/frank.jpg">
 					
+						</section>
+						<section data-background="images/cards.jpg">
+							
 						</section>
 					</section>
 			</div>
